# qaero

./: README.md  pyproject.toml
.github/workflows/: benchmarks.yml  ci.yml
algorithms/optimization/: __init__.py
src/qaero/: __init__.py
src/qaero/algorithms/: __init__.py
src/qaero/algorithms/optimization/: multi_objective.py  qaoa_advanced.py
src/qaero/algorithms/pde/: __init__.py  variational_solvers.py
src/qaero/algorithms/rom/: surrogate_models.py
src/qaero/algorithms/uncertainty/: quantum_bayesian.py
src/qaero/backends/: __init__.py  base.py  classical.py  quantum.py
src/qaero/backends/compilation/: __init__.py
src/qaero/backends/job_management/: __init__.py
src/qaero/backends/quantum/: __init__.py
src/qaero/benchmarks/: __init__.py
src/qaero/cli/: __init__.py
src/qaero/core/: __init__.py  backend_interface.py  base.py  metrics.py  registry.py  results.py  solver.py
src/qaero/jupyter/: __init__.py
src/qaero/numerics/discretization/: __init__.py
src/qaero/numerics/linear_algebra/: __init__.py
src/qaero/numerics/mesh/: __init__.py
src/qaero/numerics/rom/: __init__.py
src/qaero/personas/: __init__.py
src/qaero/problems/: __init__.py  aerodynamics.py  trajectory.py
tests/: __init__.py  conftest.py  test_algorithms.py  test_backends.py  test_core.py  test_problems.py
