[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "qaero"
dynamic = ["version"]
description = "Quantum Aerospace Optimization & Simulation Toolkit"
authors = [{name = "QAero Development Team", email = "dev@qaero.tech"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["quantum", "aerospace", "optimization", "cfd", "trajectory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Aerospace Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Aerospace",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",  # For result visualization
]

[project.optional-dependencies]
quantum = [
    "qiskit>=0.45.0",  # IBM quantum computing
    "qiskit-aer>=0.13.0",  # Simulators
    "pennylane>=0.32.0",  # Quantum machine learning
    "cirq-google>=1.2.0",  # Google quantum
]
dwave = [
    "dwave-ocean-sdk>=6.4.0",  # D-Wave quantum annealing
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "nbsphinx>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/qaero-dev/qaero"
Documentation = "https://qaero.readthedocs.io"
Repository = "https://github.com/qaero-dev/qaero"
"Bug Reports" = "https://github.com/qaero-dev/qaero/issues"

[tool.setuptools_scm]
write_to = "src/qaero/_version.py"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
select = [
    "E", "F", "W",  # Basic style and errors
    "I",  # Import order
    "UP",  # Pyupgrade
]
ignore = ["E501"]  # Allow long lines for now

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true