[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "qaero"
dynamic = ["version"]
description = "Quantum Aerospace Optimization & Simulation Toolkit"
authors = [{name = "QAero Development Team", email = "dev@qaero.tech"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["quantum", "aerospace", "optimization", "cfd", "trajectory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Aerospace Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Aerospace",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
quantum = [
    "qiskit>=0.45.0",
    "qiskit-aer>=0.13.0",
    "pennylane>=0.32.0",
    "cirq>=1.0.0",
    "cirq-google>=1.2.0",
]
dwave = [
    "dwave-ocean-sdk>=6.4.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "nbsphinx>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/qaero-dev/qaero"
Documentation = "https://qaero.readthedocs.io"
Repository = "https://github.com/qaero-dev/qaero"
"Bug Reports" = "https://github.com/qaero-dev/qaero/issues"

[tool.setuptools_scm]
write_to = "src/qaero/_version.py"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
select = [
    "E", "F", "W", "I", "UP", "BLE", "ANN", "S", "COM", "ARG", "DTZ", "T10", "EM", "RET", "SLF", "PTH", "RSE", "LOG", "FLY", "TRY", "SLOT", "FIX", "B", "AIR", "PERF", "FBT", "TID", "TCH", "INT", "C4", "PT", "YTT", "RUF",
]
ignore = ["E501", "ANN101", "S101", "SLF001", "TRY003"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--strict-markers --strict-config --tb=short"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "quantum: marks tests that require quantum dependencies",
    "integration: marks tests as integration tests",
]